<resources>
    <string name="app_name">CompositionNumberApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_title_welcome_fragment">Состав числа</string>
    <string name="game_rules">
        Правила игры:перед вами будет 3 фигуры, необходимо выбрать такое
        число, что бы в результате суммы двух нижних чисел получилось верхнее число. \n\n Пример: в
        верхней фигуре число 9, в одном из нижних 4, нужно выбрать 5, так как \n 4 + 5 = 9 </string>
    <string name="button_understand">Понятно</string>
    <string name="tv_title_level_selection_fragment">Выберите уровень:</string>
    <string name="button_test_level">Тестовый</string>
    <string name="button_easy_level">Лёгкий</string>
    <string name="button_normal_level">Средний</string>
    <string name="button_hard_level">Сложный</string>
    <string name="question">/?</string>
    <string name="tv_answer_progress">правильных ответов %s (минимум %s)</string>
    <string name="button_finish_fragment">Попробовать снова</string>
    <string name="need_right_answers">Необходимое количество правильных ответов : %s</string>
    <string name="game_score">Ваш счёт: %s</string>
    <string name="need_percent_right_answer">Необходимый процент правильных ответов: %s</string>
    <string name="percent_right_answer">Процент правильных ответов: %s</string>
</resources>