<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.LevelSelectionFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_level_selection_fragment"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_test_level"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_easy_level"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/easy_level"/>
        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_normal_level"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/normal_level"/>

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_hard_level"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/hard_level"/>





    </LinearLayout>
</layout>
