<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.FinishGameFragment">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@drawable/lost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/need_right_answers"/>

    <TextView
        android:id="@+id/need_right_answers"
        style="@style/string_finish_fragment"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/game_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/need_right_answers"/>

    <TextView
        android:id="@+id/game_score"
        style="@style/string_finish_fragment"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/need_percent_right_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/game_score"/>

    <TextView
        android:id="@+id/need_percent_right_answer"
        style="@style/string_finish_fragment"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/percent_right_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/need_percent_right_answer"/>

    <TextView
        android:id="@+id/percent_right_answer"
        style="@style/string_finish_fragment"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toTopOf="@+id/button_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/percent_right_answer"/>

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>